--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -72,7 +72,75 @@
     "learnMore": "Learn More",
     "applyNow": "Apply Now",
     "noResults": "No benefits found matching your criteria",
-    "tryAgain": "Try adjusting your answers or check back later"
+    "tryAgain": "Try adjusting your answers or check back later",
+    "summary": {
+      "title": "Your Benefit Eligibility Results",
+      "qualified": "Qualified",
+      "likely": "Likely",
+      "maybe": "Maybe",
+      "notQualified": "Not Qualified",
+      "all": "All",
+      "qualifiedFor": "Qualified for {{count}} of {{total}} programs",
+      "evaluatedOn": "Evaluated on {{date}}"
+    },
+    "status": {
+      "qualified": "You Qualify",
+      "likely": "Likely Qualify",
+      "maybe": "May Qualify",
+      "unlikely": "Unlikely to Qualify",
+      "notQualified": "Not Qualified"
+    },
+    "actions": {
+      "newAssessment": "New Assessment",
+      "exportPdf": "Export to PDF",
+      "exportEncrypted": "Export Encrypted File",
+      "importResults": "Import Results",
+      "whyThisResult": "Why this result?",
+      "needsVerification": "Needs Verification",
+      "clearMismatch": "Clear Mismatch"
+    },
+    "additionalInfo": {
+      "title": "Additional Information Needed",
+      "message": "You may qualify for some programs, but we need more information to determine eligibility. Review the program details below and contact the program office for assistance."
+    },
+    "resources": {
+      "title": "Additional Resources",
+      "government": "Government Resources",
+      "support": "Support & Assistance",
+      "benefitsGov": "Benefits.gov - Federal Benefits Information",
+      "usaGov": "USA.gov - Government Benefits Guide",
+      "localAssistance": "211 - Local Assistance Hotline",
+      "healthcareGov": "Healthcare.gov - Health Insurance"
+    },
+    "processing": {
+      "title": "Processing Your Results",
+      "description": "We're analyzing your eligibility for government benefit programs. This will only take a moment...",
+      "dots": "•"
+    },
+    "noResults": {
+      "title": "No Results Available",
+      "description": "Complete the eligibility questionnaire to see which government benefit programs you may qualify for.",
+      "startAssessment": "Start Assessment"
+    },
+    "confidence": {
+      "strongMatch": "Strong Match",
+      "goodMatch": "Good Match",
+      "possibleMatch": "Possible Match",
+      "clearMismatch": "Clear Mismatch",
+      "likelyIneligible": "Likely Ineligible",
+      "insufficientData": "Insufficient Data",
+      "needsVerification": "Needs Verification",
+      "moreInfoRequired": "More Info Required"
+    },
+    "export": {
+      "exportToPdf": "Export to PDF",
+      "exportEncrypted": "Export Encrypted File",
+      "exporting": "Exporting...",
+      "exportEncryptedResults": "Export Encrypted Results"
+    },
+    "import": {
+      "importResults": "Import Results"
+    }
   },
   "settings": {
     "title": "Settings",
@@ -134,6 +202,41 @@
     "legal": "Legal Aid",
     "senior": "Senior Services",
     "veteran": "Veteran Benefits",
-    "disability": "Disability Services"
+    "disability": "Disability Services",
+    "descriptions": {
+      "medicaid": "Health coverage for low-income individuals and families",
+      "snap": "SNAP helps low-income individuals and families buy food",
+      "wic": "Provides nutrition assistance to pregnant women, new mothers, and young children",
+      "default": "Government benefit program"
+    }
+  },
+  "formatting": {
+    "currency": "{{amount, currency}}",
+    "number": "{{value, number}}",
+    "date": "{{date, date}}",
+    "dateTime": "{{date, dateTime}}",
+    "percent": "{{value, percent}}",
+    "examples": {
+      "currency": "Monthly income: $2,500.00",
+      "number": "Household size: 4",
+      "date": "Application date: 12/25/2024",
+      "dateTime": "Last updated: 12/25/2024 at 3:30 PM",
+      "percent": "Tax rate: 15%"
+    }
+  },
+  "feedback": {
+    "title": "Translation Feedback",
+    "suggestImprovement": "Suggest Improvement",
+    "reportIssue": "Report Issue",
+    "suggestedTranslation": "Suggested Translation",
+    "reason": "Reason",
+    "issueDescription": "Issue Description",
+    "severity": "Severity",
+    "submit": "Submit",
+    "export": "Export Feedback",
+    "cancel": "Cancel",
+    "submitting": "Submitting...",
+    "communityStats": "Community feedback: {{suggestions}} suggestions, {{issues}} issues",
+    "recentActivity": "({{count}} this week)"
   }
 }
