Update privacy section translations in en.json
Revised the 'encryption' and 'localStorage' strings in the privacy section for improved clarity and user assurance about data protection and offline functionality.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -156,10 +156,10 @@
   "privacy": {
     "title": "Privacy & Security",
     "description": "Your privacy is our priority. All data processing happens locally on your device.",
-    "encryption": "Data Encryption",
+    "encryption": "Your data is protected with strong encryption to keep your information secure.",
     "offline": "Offline Processing",
     "noTracking": "No Tracking",
-    "localStorage": "Local Storage Only",
+    "localStorage": "Works completely offline - no internet required for your assessment.",
     "encryptionStatus": "Encryption Status",
     "encrypted": "Encrypted",
     "notEncrypted": "Not Encrypted"
