Enhance WelcomeTour with assessment start and UI updates
Added an onStartAssessment prop to WelcomeTour and wired it up in App.tsx to allow starting the questionnaire from the tour. Improved element highlighting logic, updated the tour card layout for better centering, and added 'skip' translations to English and Spanish locale files.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,8 @@
     "all": "All",
     "none": "None",
     "required": "Required",
-    "optional": "Optional"
+    "optional": "Optional",
+    "skip": "Skip"
   },
   "navigation": {
     "home": "Home",
