Add advanced accessibility and theme features
Introduces dark mode, customizable text sizing, print optimization, and comprehensive keyboard shortcuts. Adds ThemeContext, TextSizeContext, ThemeSwitcher, TextSizeControls, KeyboardShortcuts, and ShortcutsHelp components. Updates App.tsx to use new providers and controls, enhances navigation bar, and adds shortcuts help modal. Includes documentation for advanced features and updates i18n files and styles for new functionality.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,7 +34,8 @@
     "about": "About",
     "tour": "Tour",
     "privacy": "Privacy",
-    "guide": "Guide"
+    "guide": "Guide",
+    "shortcuts": "Shortcuts"
   },
   "app": {
     "title": "BenefitFinder",
