--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -34,7 +34,8 @@
     "about": "Acerca de",
     "tour": "Recorrido",
     "privacy": "Privacidad",
-    "guide": "Guía"
+    "guide": "Guía",
+    "shortcuts": "Atajos"
   },
   "app": {
     "title": "BenefitFinder",
